# mlpfile

./: .pre-commit-config.yaml  .travis.yml  README.md  _mlpfile_python.py  debugbuild.sh  mlpfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  pip.yml  wheels.yml
docs/: Makefile  api.rst  conf.py  index.rst  overview.rst  requirements.txt
mlpfile/: __init__.py  _codegen.py
mlpfile/cpp/: bindings.cpp  mlpfile.cpp  mlpfile.h
mlpfile/torch/: __init__.py  torch.py
src/: mlpfile.cpp  mlpfile.h
tests/: benchmark.py  test.py
