[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "eigenpip",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-requires = ["numpy", "pytest", "torch"]
test-command = "pytest {project}/tests/test.py"
test-skip = "*universal2:arm64"

# TODO: Get rid of some of this stuff.
[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"
