[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "eigenpip",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*"  # No PyPy since we use C extension
test-requires = ["numpy", "eigenpip", "pytest", "torch"]
test-command = "pytest {project}/tests/test.py"
test-skip = [
  "*universal2:arm64",  # TODO: Why?
  "cp37-*",             # Too old
  "cp312-*",            # Too new (something w/ distutils)
  "*-manylinux_i686",   # PyTorch doesn't have 32-bit builds, I think
  "*-musllinux*",       # PyTorch doesn't have musl-compatible builds, I think
]

# TODO: Get rid of some of this stuff.
[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"
